examples/test/testpolicy5422.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5422
  namespace: namespace478
spec:
  podSelector:
    matchLabels:
      key14: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value10
      podSelector:
        matchLabels:
          key42: value39
          key15: value1
          key20: value1
